avionic apies added